Fixed: container alignment

--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ body {
 
 .container-timer {
   width: 400px;
-  gap: 5px;
+  gap: 13px;
+  text-align: center;
   align-items: center;
   padding: 5px;
   display: flex;
@@ -78,7 +79,7 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: 1.2em;
+  margin: 1em;
   transform: translate(-1px, -5px);
 }
 
